@@ -1,5 +1,6 @@
   Fixed issue MR-377 - Several redundant panels can be opened
   Fixed issue MR-379 - Connection variables not working with external tools
+  Fixed issue MR-381 - Notifications panel - whitespace context menu allows Copy and Delete on nothing
   The username and domain settings are now hidden for VNC connections since they are not supported.
   Changed "Automatically get session information" to be disabled by default.
 
